fix(Checkbox): Adding margin to the label span for better alignment

--- a/react/Checkbox/Checkbox.less
+++ b/react/Checkbox/Checkbox.less
@@ -34,6 +34,10 @@
   display: flex;
 }
 
+.checkboxLabel {
+  margin-top: (@row-height / 2);
+}
+
 .checkbox {
   .activeFocusReset();
 
